--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@capacitor/ios": "next",
     "@capacitor/keyboard": "next",
     "@capacitor/status-bar": "next",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
