--- a/Frontend/capacitor.config.json
+++ b/Frontend/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "scanner.app",
-  "appName": "scanner-app",
+  "appId": "nadaa.cpt.app",
+  "appName": "CPT Sample Scanner",
   "webDir": "dist",
   "bundledWebRuntime": false
 }
