--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@capacitor/cli": "next",
     "@vitejs/plugin-vue": "^4.1.0",
+    "quagga": "^0.12.1",
     "vite": "^4.3.2"
   }
 }
